Tue Jul 30 07:24:12 1996  Kevin Layer  <layer@freezer>

	* fi-lep.el: defontify in lep::buffer-region
	* local-fi-developer-hooks.el: fix use of push-mark for Xemacs

Thu Jun 27 16:56:49 1996  Kevin Layer  <layer@freezer>

	* Makefile: revamp to make some compilation warnings go away (load all
	sources before compiling anything)
	* fi-compile.el: used by Makefile
	* fi-basic-lep.el: lep::handle-query is used (I checked lisp, too)
	* Doc.el: make some compiler warnings go away
	* fi-changes.el: make some compiler warnings go away (don't use
	specials to pass info from one function to another, use
	arguments); unlock-file-suffix is a local feature, rename to
	fi::unlock-file-suffix and set to `nil' effectively disabling this
	feature
	* fi-clman.el: make some compiler warnings go away
	* fi-dmode.el: make some compiler warnings go away
	* fi-emacs19.el: make some compiler warnings go away
	* fi-gnu.el: fi::backup-extract-version not used
	* fi-keys.el: make some compiler warnings go away
	* fi-leep-xemacs.el: syntax error in doc string
	* fi-lep.el: make some compiler warnings go away
	* fi-site-init.el: local hacks (fi::load-el-files-only)
	* fi-subproc.el: make some compiler warnings go away
	* fi-telnet.el: make some compiler warnings go away
	* fi-utils.el: make some compiler warnings go away
	* makeman.el: make some compiler warnings go away

Fri Jun 21 10:35:39 1996  Kevin Layer  <layer@freezer>

	* fi-sublisp.el: fix doc string

Tue Jun 11 08:49:29 1996    <layer@hobart.franz.com>

	* fi-emacs19.el: fix last change (making menubar buffer-local)
	since it caused slowness when starting up the buffer's mode

	* fi-site-init.el: use fi::load instead of load everywhere, since
	it compiles and loads files on windows

Wed Jun 05 13:30:38 1996    <layer@hobart.franz.com>

	* fi-xemacs.el:
	* fi-emacs19.el: don't put composer on menubar on Windows

	* fi-modes.el: New function fi::kill-all-local-variables which is